# tttc_practice

lab1_znackov/: README.md
lab1_znackov/external clang plugin/: CMakeLists.txt  UnusedVarDetector.cpp
lab1_znackov/internal clang plugin/: CMakeLists.txt  UnusedVarDetector.cpp
